fix to icon alignment in sidebar

--- a/app/assets/sass/hackney.scss
+++ b/app/assets/sass/hackney.scss
@@ -521,5 +521,5 @@ body {
 
 .icon-bell--small {
   height: 26px;
-  margin: 1px 4px 0 0;
+  margin: 4px 4px 0 0;
 }
